2020-06-22  Bruno Haible  <bruno@clisp.org>

	Fix a build error on Cygwin in C++ mode.
	* unix.d (waitpid): Don't redeclare on Cygwin.

2020-06-22  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Cygwin/x86_64.
	* Makefile.devel (multibuild-cygwin-64): Enable all build variants that
	work.
	* makemake.in (XCFLAGS): For Cygwin/x86_64, enable all optimizations
	except ASM.

2020-06-21  Bruno Haible  <bruno@clisp.org>

	Fix a build error on mingw.
	* _clisp.c: Include w32shell.c in such a way that it gets found.

2020-06-21  Bruno Haible  <bruno@clisp.org>

	Fix configuration on mingw.
	* m4/address.m4 (CL_ADDRESS_RANGE): Write conftest.h with Unix newlines.
	* m4/filecharset.m4 (CL_FILECHARSET): Write conftest.out with Unix
	newlines.
	* m4/tcpconn.m4 (CL_TCPCONN): Don't check for the setsockopt() prototype
	on native Windows. The parameter macros are defined in win32.d instead.

2020-06-21  Bruno Haible  <bruno@clisp.org>

	Make the DISASSEMBLE command for machine code work again.
	* disassem.lisp (disassemble-machine-code): Allow spaces at the
	beginning of disassembly lines. Hide the output of the attach command.
	Prefer the 'less' program to the 'more' program when it exists.

2020-06-21  Bruno Haible  <bruno@clisp.org>

	Fix a "make install" failure on Solaris.
	* makemake.in (installdirs, install-bin): Put symlinks in
	$(prefix)/share/locale, not $(prefix)/locale. Make sure this directory
	exists.

2020-06-21  Bruno Haible  <bruno@clisp.org>

	Fix test failures on FreeBSD 12.
	* spvw_language.d (init_language): Try locale names with suffix
	".UTF-8", not ".utf8".

2020-06-21  Bruno Haible  <bruno@clisp.org>

	Fix portability problems in SOCKET-CONNECT with :TIMEOUT 0.
	Reported at <https://gitlab.com/gnu-clisp/clisp/-/issues/25>.
	* socket.d (connect_via_ip): Don't wait if no timeout was given. Don't
	special-case timeout == 0.
	* stream.d (SOCKET-CONNECT): Map a zero timeout to 1 ms.

2020-06-21  Bruno Haible  <bruno@clisp.org>
